OpenAICore: Close the request-path enforcement gap
Problem: consent and quota were checked in the broker, but the platform
routes processRequest from OnDeviceIntelligenceManagerService straight to
the sandbox. Neither check was on the path a real inference request takes,
so a caller holding a Feature from before the user turned the feature off
was still served.

Solution: enforce each control where the information for it exists. Quota
moves to the sandbox, which is what receives callerUid. Per-package consent
moves to OpenIntelligenceService, the only place a package name is
resolvable - an isolated process cannot reach the package manager. The
global switch is enforced by withholding the model descriptor, which every
request needs and only the broker can supply.

Also: fixed missing Bundle imports in the client AIDL, a blank-final read
from a field-initializer lambda in ResourceGovernor, and an unreported
RemoteException from calling the Stub in dump(). Verified by compiling
against prebuilts/sdk/37.0 - system SDK for the services, public SDK for
the client library, which is what keeps the SDK usable by ordinary apps.
Native sources syntax-check clean under clang-r596125.